welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: value || is not a member of Int
	if ( (1 || 2 || 3 || 4 || 5 ) && vacation==false) { 
                ^alarmClock:5: error: value || is not a member of Int
	if ( ( 0 ||6 ) && vacation==false ) {
                 ^alarmClock:5: error: type mismatch;
 found   : Unit
 required: String
	if ( ( 0 ||6 ) && vacation==false ) {
        ^