welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if ( (1 || 2 || 3 || 4 || 5 ) && vacation==false) { 
		return "7:00"
	}
	if ( ( 0 ||6 ) && vacation==false ) {
		return "10:00"
	}
}
